Make sure title wraps

--- a/frontend/src/pages/Error/components/ErrorTitle/ErrorTitle.module.scss
+++ b/frontend/src/pages/Error/components/ErrorTitle/ErrorTitle.module.scss
@@ -12,6 +12,7 @@
 
         h3 {
             margin-bottom: 0 !important;
+            overflow-wrap: anywhere;
         }
     }
 
